--- a/APPSenSoutenance/App.config
+++ b/APPSenSoutenance/App.config
@@ -14,9 +14,7 @@
       </provider></providers>
   </entityFramework>
 	<connectionStrings>
-		<add name="connBdSenSoutenance"
-		providerName="MySql.Data.MySqlClient"
-		connectionString="server=localhost;port=3306;database=bdsensoutenance;uid=root;password=P@sser123" />
+		<add name="connBdSenSoutenance" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3306;database=bdsensoutenance;uid=root;password=P@sser123" />
 	</connectionStrings>
 	<runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -27,6 +25,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.6.0.0" newVersion="9.6.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
