--- a/APPSenSoutenance/APPSenSoutenance.csproj
+++ b/APPSenSoutenance/APPSenSoutenance.csproj
@@ -61,8 +61,8 @@
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.5.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
-    <Reference Include="MySql.Data, Version=9.5.0.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <HintPath>..\packages\MySql.Data.9.5.0\lib\net48\MySql.Data.dll</HintPath>
+    <Reference Include="MySql.Data, Version=9.6.0.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.9.6.0\lib\net48\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data.EntityFramework, Version=9.5.0.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.EntityFramework.9.5.0\lib\net48\MySql.Data.EntityFramework.dll</HintPath>
@@ -124,6 +124,18 @@
     <Compile Include="frmMDI.Designer.cs">
       <DependentUpon>frmMDI.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202601291401188_UpdateDatabaseSchema.cs" />
+    <Compile Include="Migrations\202601291401188_UpdateDatabaseSchema.Designer.cs">
+      <DependentUpon>202601291401188_UpdateDatabaseSchema.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202601291825406_AjoutTypeUtilisateur.cs" />
+    <Compile Include="Migrations\202601291825406_AjoutTypeUtilisateur.Designer.cs">
+      <DependentUpon>202601291825406_AjoutTypeUtilisateur.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202601291830308_AjoutTypeUtilisateur1.cs" />
+    <Compile Include="Migrations\202601291830308_AjoutTypeUtilisateur1.Designer.cs">
+      <DependentUpon>202601291830308_AjoutTypeUtilisateur1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Admin.cs" />
     <Compile Include="Models\AnneeAcademique.cs" />
@@ -136,11 +148,13 @@
     <Compile Include="Models\Professeur.cs" />
     <Compile Include="Models\Session.cs" />
     <Compile Include="Models\Soutenance.cs" />
+    <Compile Include="Models\Td_Erreur.cs" />
     <Compile Include="Models\Utilisateur.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shared\Crypted.cs" />
     <Compile Include="Shared\FillerList.cs" />
+    <Compile Include="Shared\logger.cs" />
     <Compile Include="Views\Account\frmUtilisateur.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -194,6 +208,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMDI.resx">
       <DependentUpon>frmMDI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202601291401188_UpdateDatabaseSchema.resx">
+      <DependentUpon>202601291401188_UpdateDatabaseSchema.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202601291825406_AjoutTypeUtilisateur.resx">
+      <DependentUpon>202601291825406_AjoutTypeUtilisateur.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202601291830308_AjoutTypeUtilisateur1.resx">
+      <DependentUpon>202601291830308_AjoutTypeUtilisateur1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
